[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

project]
name = "DataPrepKit_hossamxstudios"
version = "0.0.1"
authors = [
  { name="Example Author", email="hossamfarid71@gmail.com" },
]
description = "DataPrepKit is your go-to companion for effortlessly preparing your data, offering intuitive tools to read, clean, summarize, and transform datasets with ease."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"